2007-02-22 TADA Tadashi <sho@spc.gr.jp>
	* add new plugin: hide-mail-field.rb

2007-02-21 zunda <zunda at freeshell.org>
	* my-sequel.rb: added a test case `testadd_two_months',
	which reproduces the bug reported at
	http://zunda.freeshell.org/d/20070122.html#c01
	Thanks to miyasaka_m

2007-02-21 TADA Tadashi <sho@spc.gr.jp>
	* footnote.rb: fix bug on Wiki style. support latest and month view.
	thanks to sunoko.

2007-02-19 TADA Tadashi <sho@spc.gr.jp>
	* add new plugin: edit_today.rb.

2007-02-15  Kazuhiko  <kazuhiko@fdiary.net>
	* footnote.rb: modified to work on secure mode.

2007-02-13 TADA Tadashi <sho@spc.gr.jp>
	* footnote.rb: support whatsnew-list.rb in Blogkit.

2007-02-10 TADA Tadashi <sho@spc.gr.jp>
	* amazon.rb: fix: author dose not have '()'.
	* footnote.rb: insert footnote into each section.
	* makerss.rb: insert body_enter and body_leave procs.
	* makerss.rb: add 'feed?' method that turns true in feed.

2007-02-09 TADA Tadashi <sho@spc.gr.jp>
	* makerss.rb: delete xhtml prefix from attributes of mobile link discovery.
	* amazon.rb: add new plugin 'isbn_detail'.

2007-02-07 TADA Tadashi <sho@spc.gr.jp>
	* amazon.rb: rewind about proxy, and use @conf['proxy'].

2007-02-06 SHIBATA Hiroshi <h-sbt@nifty.com>
	* amazon.rb: replace NKF::nkf to @conf.to_native.

2007-02-06 TADA Tadashi <sho@spc.gr.jp>
	* amazon.rb: delete proxy code (using ENV in open-uri).

2007-01-29 TADA Tadashi <sho@spc.gr.jp>
	* akismet.rb: add plugin to setup Akismet spam filter.

2007-01-27 TADA Tadashi <sho@spc.gr.jp>
	* my-sequel.rb: remove <p> inner <div>.

2007-01-24 SHIBATA Hiroshi <h-sbt@nifty.com>
	* recent_trackback3.rb,recent_comment3.rb: fix bug: enable to shoten title.

2007-01-24 TADA Tadashi <sho@spc.gr.jp>
	* amazon.rb: support Amazon-ECS 2007-01-17: ISBN-13.

2007-01-23 zunda <zunda at freeshell.org>
	* ja/disp_referrer.rb: added blog-search.yahoo.co.jp

2007-01-21 SHIBATA Hiroshi <h-sbt@nifty.com>
	* recent_comment3.rb: modified not to escape anchor().